--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload JAR file
+        uses: actions/upload-artifact@v2
+        with:
+          name: Build Res
+          path: target/*.jar
